force-app/main/default/objects/Cart_Product_Relationship__c/Cart_Product_Relationship__c.object-meta.xml
<CustomObject>
    <label>Cart Product Relationship</label>
    <nameField>
        <displayFormat>C-{00000}</displayFormat>
        <label>Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cart Product Relationships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>